added database Services New files added - [sales] Files modified - [Main,profiles,pom.xml,project-services.xml]

--- a/profiles/deployment.properties
+++ b/profiles/deployment.properties
@@ -12,6 +12,16 @@ app.web.compression.minsize=65536
 build.ui.mode=angular
 build.ui.ng.args=--prod=true --source-map=false
 build.ui.node.args=--max-old-space-size=512
+db.sales.dataSourceType=WM_MANAGED_DATASOURCE
+db.sales.hbm2ddl=none
+db.sales.jndiName=
+db.sales.maxPageSize=100
+db.sales.maxPoolSize=4
+db.sales.minPoolSize=2
+db.sales.password={WM_CLOUD_MYSQL_PASSWORD}
+db.sales.transactionTimeout=30
+db.sales.url=jdbc:mysql://{WM_CLOUD_MYSQL_HOST}/sales?useUnicode=yes&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&createDatabaseIfNotExist=true
+db.sales.username={WM_CLOUD_MYSQL_USER_NAME}
 security.enabled=false
 security.general.cors.allowCredentials=false
 security.general.cors.enabled=false
